--- a/wp-content/themes/humescore/style.css
+++ b/wp-content/themes/humescore/style.css
@@ -164,8 +164,7 @@ blockquote:after {
     color: #777; }
   .menu .menu-item {
     padding-right: 3rem;
-    position: relative;
-    width: 128px; }
+    position: relative; }
     .menu .menu-item .sub-menu {
       list-style: none;
       box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.08);
@@ -267,8 +266,6 @@ blockquote:after {
   font-size: 16px;
   overflow-y: scroll;
   display: none; }
-  .menuMobile .menu .menu-item .sub-menu [class*="menu-item-"]:hover .sub-menu {
-    display: none; }
   .menuMobile ul {
     padding: 0; }
   .menuMobile .font-sizes {
@@ -535,22 +532,24 @@ Single Posts
     border: 1px solid #dcdcdc;
     margin-right: 1rem;
     height: 30px;
-    min-width: 100px;
     display: flex;
     justify-content: center;
     align-items: center; }
     .menuWrapper .menuWrapper2 a {
       color: #797d82;
       text-decoration: none;
-      width: 100%;
+      width: 70%;
       display: flex; }
+      .menuWrapper .menuWrapper2 a span:first-child {
+        width: 20%; }
+      .menuWrapper .menuWrapper2 a span :nth(2) {
+        width: 80%; }
       .menuWrapper .menuWrapper2 a span {
-        width: 26px;
         height: 65%;
         padding-top: 3px; }
-      .menuWrapper .menuWrapper2 a .icon {
-        height: 16px;
-        width: 100%; }
+        .menuWrapper .menuWrapper2 a span .icon {
+          height: 16px;
+          width: 100%; }
     .menuWrapper .menuWrapper2:hover {
       background: #dd5252; }
       .menuWrapper .menuWrapper2:hover .icon {
@@ -591,8 +590,7 @@ Single Posts
     width: 100% !important; }
 
 .relatedPosts .image {
-  height: 120px;
-  width: 167px; }
+  height: 120px; }
   .relatedPosts .image img {
     height: 100%;
     width: 100%; }
@@ -670,16 +668,25 @@ Single Posts
   color: red; }
 
 #author {
-  height: 41px; }
+  height: 41px;
+  width: 90%; }
 
 #email {
-  height: 41px; }
+  height: 41px;
+  width: 90%; }
 
 #url {
-  height: 41px; }
+  height: 41px;
+  width: 90%; }
 
 #email-notes {
   margin-left: 2rem; }
+
+.comment-form-email label {
+  width: 100%; }
+
+.comment-form-author label {
+  width: 100%; }
 
 /*-------------------------------------------------------------------------------------------
 Footer
@@ -695,7 +702,6 @@ Footer
   .site-footer .tagsWrapper {
     border: 1px solid;
     height: 29px;
-    width: 72px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -1298,7 +1304,8 @@ navigationLinks
   height: 286px; }
 
 #posts_categories .entry-meta {
-  border: none; }
+  border: none;
+  justify-content: start; }
 
 #posts_categories #contentBorder {
   border-bottom: 1px solid #dcdcdc; }
@@ -1316,7 +1323,8 @@ navigationLinks
     margin-bottom: 9px; }
     #content1 .title a {
       color: #333;
-      text-decoration: none; }
+      text-decoration: none;
+      font-size: 21px; }
 
 .links {
   height: 90px; }
@@ -1324,8 +1332,7 @@ navigationLinks
     margin-bottom: 23px; }
     .links .linkMore a {
       color: #777;
-      text-decoration: none;
-      padding-left: 11px; }
+      text-decoration: none; }
 
 .adjust {
   overflow: hidden; }
@@ -1352,10 +1359,13 @@ navigationLinks
   padding-left: 0; }
 
 #tags .entry-meta {
-  font-size: 10px; }
+  font-size: 10px;
+  display: inline-block; }
+  #tags .entry-meta a {
+    font-size: 10px; }
 
 #tags #content1 {
-  min-height: 259px; }
+  min-height: 330px; }
 
 /*--------------------------------------------------------------------------------------------
 	pages
@@ -1523,7 +1533,7 @@ mediaqueries
 
 @media only screen and (max-width: 576px) {
   .footerImages .button {
-    width: 37%;
+    width: 66%;
     top: 27%;
     left: 16%; } }
 
@@ -1595,8 +1605,6 @@ mediaqueries
 	head mediaqueries
 -----------------------*/
 @media only screen and (max-width: 992px) {
-  .header_account {
-    justify-content: center; }
   .smallMenuSocialWrapper {
     display: none; }
     .smallMenuSocialWrapper .smallMenuSocial {
@@ -1721,7 +1729,18 @@ mediaqueries
   .inputHeight {
     height: 117px; }
   .border .iconsWrapper a {
-    width: 100%; } }
+    width: 100%; }
+  #author {
+    height: 41px;
+    width: 131px; }
+  #email {
+    height: 41px;
+    width: 131px; }
+  #url {
+    height: 41px;
+    width: 131px; }
+  .menuWrapper .menuWrapper2 a {
+    justify-content: center; } }
 
 @media only screen and (max-width: 576px) {
   .border img {
@@ -1761,3 +1780,67 @@ mediaqueries
     padding-left: 1rem; }
   .comment-form-comment label {
     padding-left: 1rem; } }
+
+/*-------------
+*/
+@media only screen and (max-width: 992px) {
+  .searchSmMenu .search-field {
+    width: 100%; }
+  .searchSmMenu .searchIconSM {
+    right: 40px; }
+  .adjustIcons {
+    justify-content: center; }
+  .comment-form-email label {
+    width: 100%; }
+  .comment-form-author label {
+    width: 100%; } }
+
+@media only screen and (max-width: 1200px) {
+  .header_account {
+    justify-content: center; }
+  #changeDirectionDiv {
+    justify-content: center !important; } }
+
+@media only screen and (max-width: 576px) {
+  .menuSmall .icon {
+    height: 15px;
+    cursor: pointer;
+    fill: #333;
+    margin-right: 0px; }
+  .otherPosts .contentOfPosts p {
+    height: 213px; } }
+
+@media only screen and (max-width: 480px) {
+  .block_categories .text {
+    left: 27.5px; } }
+
+@media only screen and (min-width: 993px) and (max-width: 1199px) {
+  .block_categories .text {
+    left: 52.5px; } }
+
+@media only screen and (max-width: 367px) {
+  .block_categories .text {
+    left: 11.5px; }
+  .block_categories .text a {
+    font-size: 16px;
+    color: white;
+    text-decoration: none; }
+  .site-footer a {
+    color: white;
+    text-decoration: none;
+    font-size: 12px; }
+  .footerImages .images {
+    height: 140px;
+    width: 100%; }
+  .list-inline-item {
+    width: 100%; }
+  .footerImages .button {
+    width: 67%;
+    top: 34%;
+    left: 16%; } }
+
+@media only screen and (min-width: 368px) and (max-width: 522px) {
+  .footerImages .button {
+    width: 46%;
+    top: 27%;
+    left: 14%; } }
