--- a/wp-content/themes/humescore/sass/index.scss
+++ b/wp-content/themes/humescore/sass/index.scss
@@ -1411,6 +1411,26 @@ front-Page
 	}
 }
 /*--------------------------------------------------------------------------------------------
+Popuiar Posts
+-------------------------------------------------------------------------------------------*/
+#popPost{
+	img{
+		width:100%;
+		height:112px;
+	}
+	.title{
+		
+		a{
+			font-size:14px;
+			color:#000;
+			text-decoration:none;
+		}
+	}
+	.date{
+		font-size:11px;
+	}
+}
+/*--------------------------------------------------------------------------------------------
 arrowUP
 -------------------------------------------------------------------------------------------*/
 .arrow-UP{
