--- a/wp-content/themes/humescore/style.css
+++ b/wp-content/themes/humescore/style.css
@@ -1101,6 +1101,21 @@ front-Page
   width: 100%; }
 
 /*--------------------------------------------------------------------------------------------
+Popuiar Posts
+-------------------------------------------------------------------------------------------*/
+#popPost img {
+  width: 100%;
+  height: 112px; }
+
+#popPost .title a {
+  font-size: 14px;
+  color: #000;
+  text-decoration: none; }
+
+#popPost .date {
+  font-size: 11px; }
+
+/*--------------------------------------------------------------------------------------------
 arrowUP
 -------------------------------------------------------------------------------------------*/
 .arrow-UP {
