=single Posts Page2

--- a/wp-content/themes/humescore/sass/index.scss
+++ b/wp-content/themes/humescore/sass/index.scss
@@ -1090,6 +1090,11 @@ Footer
 		}
 		.border{
 			width:100%;
+			margin-top:70px;
+		    padding: 20px 5px;
+		    img{
+		    	width:100%;
+		    }
 		}
 	}
 	.post-45{
